<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileDetailActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:text="@string/favorite_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_food_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/favorite_food_des"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_food"
                app:layout_constraintStart_toEndOf="@+id/tv_food"
                app:layout_constraintTop_toTopOf="@+id/tv_food" />

            <TextView
                android:id="@+id/tv_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/hobby"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_food"
                app:layout_constraintTop_toBottomOf="@+id/tv_food" />

            <TextView
                android:id="@+id/tv_hobby_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hobby_des"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_hobby"
                app:layout_constraintStart_toEndOf="@+id/tv_hobby"
                app:layout_constraintTop_toTopOf="@+id/tv_hobby" />

            <TextView
                android:id="@+id/tv_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/favorites"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_hobby"
                app:layout_constraintTop_toBottomOf="@+id/tv_hobby" />

            <TextView
                android:id="@+id/tv_favorites_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/favorites_des"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_favorites"
                app:layout_constraintStart_toEndOf="@+id/tv_favorites"
                app:layout_constraintTop_toTopOf="@+id/tv_favorites" />

            <TextView
                android:id="@+id/tv_weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/what_to_do_weekend"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_favorites"
                app:layout_constraintTop_toBottomOf="@+id/tv_favorites" />

            <TextView
                android:id="@+id/tv_weekend_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/what_to_do_weekend_des"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_weekend"
                app:layout_constraintStart_toEndOf="@+id/tv_weekend"
                app:layout_constraintTop_toTopOf="@+id/tv_weekend" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:contentDescription="call button"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_dm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/telephone" />

    <ImageButton
        android:id="@+id/btn_dm"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="dm button"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_call"
        app:layout_constraintTop_toTopOf="@+id/btn_call"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/comment" />

</androidx.constraintlayout.widget.ConstraintLayout>